--- a/Weather/Weather/WTCityMainViewController.xib
+++ b/Weather/Weather/WTCityMainViewController.xib
@@ -87,7 +87,6 @@
 						<string key="NSFrame">{{138, 494}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<object class="NSAppearance" key="NSAppearance" id="1019634287">
 							<string key="NSAppearanceName">NSAppearanceNameAqua</string>
 						</object>
@@ -141,9 +140,9 @@
 						<array key="IBUIGestureRecognizers" id="0"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIBounces">NO</bool>
+						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<bool key="IBUIAlwaysBounceHorizontal">YES</bool>
 						<bool key="IBUIPagingEnabled">YES</bool>
-						<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 					</object>
 					<object class="IBUIToolbar" id="175019271">
 						<reference key="NSNextResponder" ref="104524353"/>
@@ -155,7 +154,6 @@
 								<string key="NSFrame">{{141, 4}, {38, 36}}</string>
 								<reference key="NSSuperview" ref="175019271"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<reference key="NSAppearance" ref="1019634287"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -225,7 +223,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="34790441">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="1057278841">
@@ -233,8 +231,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{280, 18}, {29, 29}}</string>
 						<reference key="NSSuperview" ref="34790441"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -264,7 +260,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 13}, {73, 30}}</string>
 						<reference key="NSSuperview" ref="34790441"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1057278841"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -297,8 +292,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 109}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="410281635"/>
 				<reference key="IBUIBackgroundColor" ref="168400863"/>
 				<reference key="IBUISimulatedDestinationMetrics" ref="402223367"/>
@@ -306,7 +299,7 @@
 			</object>
 			<object class="IBUIPinchGestureRecognizer" id="459518667"/>
 			<object class="IBUIView" id="612829399">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="967616347">
@@ -314,7 +307,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 568}</string>
 						<reference key="NSSuperview" ref="612829399"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="369634576"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSHuggingPriority">{251, 251}</string>
@@ -335,8 +327,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 471}, {280, 77}}</string>
 								<reference key="NSSuperview" ref="369634576"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="NSHuggingPriority">{251, 251}</string>
 								<reference key="NSAppearance" ref="1019634287"/>
@@ -368,7 +358,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{198, 20}, {102, 29}}</string>
 								<reference key="NSSuperview" ref="369634576"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="708394404"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="NSHuggingPriority">{251, 251}</string>
@@ -397,7 +386,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 568}</string>
 						<reference key="NSSuperview" ref="612829399"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="230355691"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="NSAppearance" ref="1019634287"/>
@@ -407,8 +395,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="967616347"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
