--- a/Weather/Weather/WTCityDetailInfoView.xib
+++ b/Weather/Weather/WTCityDetailInfoView.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">14A389</string>
+		<string key="IBDocument.SystemVersion">14A238x</string>
 		<string key="IBDocument.InterfaceBuilderVersion">6250</string>
-		<string key="IBDocument.AppKitVersion">1343.14</string>
-		<string key="IBDocument.HIToolboxVersion">755.00</string>
+		<string key="IBDocument.AppKitVersion">1318.14</string>
+		<string key="IBDocument.HIToolboxVersion">735.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">6244</string>
@@ -43,7 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 29}, {116, 52}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="528399879"/>
+						<reference key="NSNextKeyView" ref="807965252"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -109,7 +109,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{142, 44}, {93, 58}}</string>
 								<reference key="NSSuperview" ref="528399879"/>
-								<reference key="NSNextKeyView" ref="858610157"/>
+								<reference key="NSNextKeyView" ref="682497168"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -228,7 +228,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{272, 191}, {28, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="571437604"/>
+						<reference key="NSNextKeyView" ref="858610157"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -250,7 +250,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 214}, {320, 113}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="807965252"/>
+						<reference key="NSNextKeyView" ref="571437604"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="245805706"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -365,7 +365,7 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 504}</string>
-				<reference key="NSNextKeyView" ref="682497168"/>
+				<reference key="NSNextKeyView" ref="528399879"/>
 				<reference key="IBUIBackgroundColor" ref="245805706"/>
 				<array key="IBUIGestureRecognizers" id="0"/>
 				<bool key="IBUIUserInteractionEnabled">NO</bool>
