--- a/Weather/Weather/WTCityInfoCellView.xib
+++ b/Weather/Weather/WTCityInfoCellView.xib
@@ -11,20 +11,20 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="WTCityInfoCellViewIdentifier" id="3">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
+        <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="WTCityInfoCellViewIdentifier" rowHeight="96" id="3">
+            <rect key="frame" x="0.0" y="0.0" width="330" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3" id="vsq-8c-lrm">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView appearanceType="aqua" clipsSubviews="YES" userInteractionEnabled="NO" tag="10000" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morning.png" id="125">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="330" height="96"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </imageView>
                     <view tag="10009" contentMode="scaleToFill" id="4" userLabel="DataView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="96"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="330" height="96"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" tag="10002" contentMode="left" text="下午" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="12">
                                 <rect key="frame" x="20" y="16" width="29" height="21"/>
@@ -64,7 +64,7 @@
             <connections>
                 <outletCollection property="gestureRecognizers" destination="90" appends="YES" id="91"/>
             </connections>
-            <point key="canvasLocation" x="185" y="144"/>
+            <point key="canvasLocation" x="190" y="81"/>
         </tableViewCell>
         <pinchGestureRecognizer id="90">
             <connections>
